clucalc/target/generated-sources/antlr/de/gaalop/clucalc/input/CluCalcParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /Users/christian/Studium/Masterarbeit/GaalopCompiler/gaalop-2.0/trunk/clucalc/src/main/antlr/de/gaalop/clucalc/input/CluCalcParser.g 2010-05-04 19:14:37

  package de.gaalop.clucalc.input;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class CluCalcParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "DECIMAL_LITERAL", "EXPONENT", "FLOATTYPESUFFIX", "FLOATING_POINT_LITERAL", "RANGE_LITERAL", "OUTPUT_LITERAL", "MINUS", "OPNS", "IPNS", "IF", "ELSE", "LOOP", "BREAK", "LETTER", "DIGIT", "IDENTIFIER", "ARGUMENT_PREFIX", "WS", "COMMENT", "PRAGMA", "LINE_COMMENT", "EQUALS", "COMMA", "PLUS", "STAR", "SLASH", "MODULO", "LSBRACKET", "RSBRACKET", "LBRACKET", "RBRACKET", "CLBRACKET", "CRBRACKET", "REVERSE", "NOT", "DOUBLE_NOT", "SEMICOLON", "WEDGE", "DOT", "QUESTIONMARK", "COLON", "DOUBLE_BAR", "DOUBLE_AND", "DOUBLE_EQUALS", "UNEQUAL", "LESS", "GREATER", "LESS_OR_EQUAL", "GREATER_OR_EQUAL", "FUNCTION", "PROCEDURE", "NEGATION", "DUAL", "BLOCK", "ELSEIF", "MACRO", "ARGUMENT"
    };
    public static final int FUNCTION=53;
    public static final int EXPONENT=5;
    public static final int STAR=28;
    public static final int DOUBLE_BAR=45;
    public static final int LETTER=17;
    public static final int GREATER_OR_EQUAL=52;
    public static final int PRAGMA=23;
    public static final int DOUBLE_EQUALS=47;
    public static final int EQUALS=25;
    public static final int NOT=38;
    public static final int ARGUMENT_PREFIX=20;
    public static final int EOF=-1;
    public static final int BREAK=16;
    public static final int DOUBLE_NOT=39;
    public static final int IF=13;
    public static final int FLOATTYPESUFFIX=6;
    public static final int CRBRACKET=36;
    public static final int LBRACKET=33;
    public static final int GREATER=50;
    public static final int SLASH=29;
    public static final int FLOATING_POINT_LITERAL=7;
    public static final int COMMA=26;
    public static final int RSBRACKET=32;
    public static final int IDENTIFIER=19;
    public static final int LOOP=15;
    public static final int ARGUMENT=60;
    public static final int QUESTIONMARK=43;
    public static final int LESS=49;
    public static final int PLUS=27;
    public static final int DIGIT=18;
    public static final int IPNS=12;
    public static final int RBRACKET=34;
    public static final int COMMENT=22;
    public static final int DOT=42;
    public static final int CLBRACKET=35;
    public static final int DUAL=56;
    public static final int MODULO=30;
    public static final int LINE_COMMENT=24;
    public static final int LESS_OR_EQUAL=51;
    public static final int ELSE=14;
    public static final int SEMICOLON=40;
    public static final int MINUS=10;
    public static final int PROCEDURE=54;
    public static final int OPNS=11;
    public static final int ELSEIF=58;
    public static final int UNEQUAL=48;
    public static final int LSBRACKET=31;
    public static final int COLON=44;
    public static final int DOUBLE_AND=46;
    public static final int WEDGE=41;
    public static final int WS=21;
    public static final int NEGATION=55;
    public static final int RANGE_LITERAL=8;
    public static final int BLOCK=57;
    public static final int OUTPUT_LITERAL=9;
    public static final int REVERSE=37;
    public static final int MACRO=59;
    public static final int DECIMAL_LITERAL=4;

    // delegates
    // delegators


        public CluCalcParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public CluCalcParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            this.state.ruleMemo = new HashMap[78+1];
             
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return CluCalcParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/christian/Studium/Masterarbeit/GaalopCompiler/gaalop-2.0/trunk/clucalc/src/main/antlr/de/gaalop/clucalc/input/CluCalcParser.g"; }


        private List<String> errors = new ArrayList<String>();
        public void displayRecognitionError(String[] tokenNames,
                                            RecognitionException e) {
            String hdr = getErrorHeader(e);
            String msg = getErrorMessage(e, tokenNames);
            errors.add(hdr + " " + msg);
        }
        public List<String> getErrors() {
            return errors;
        }


    public static class script_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "script"
    // /Users/christian/Studium/Masterarbeit/GaalopCompiler/gaalop-2.0/trunk/clucalc/src/main/antlr/de/gaalop/clucalc/input/CluCalcParser.g:41:1: script : ( statement )* EOF ;
    public final CluCalcParser.script_return script() throws RecognitionException {
        CluCalcParser.script_return retval = new CluCalcParser.script_return();
        retval.start = input.LT(1);
        int script_StartIndex = input.index();
        Object root_0 = null;

        Token EOF2=null;
        CluCalcParser.statement_return statement1 = null;


        Object EOF2_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }
            // /Users/christian/Studium/Masterarbeit/GaalopCompiler/gaalop-2.0/trunk/clucalc/src/main/antlr/de/gaalop/clucalc/input/CluCalcParser.g:41:9: ( ( statement )* EOF )
            // /Users/christian/Studium/Masterarbeit/GaalopCompiler/gaalop-2.0/trunk/clucalc/src/main/antlr/de/gaalop/clucalc/input/CluCalcParser.g:42:3: ( statement )* EOF
            {
            root_0 = (Object)adaptor.nil();

            // /Users/christian/Studium/Masterarbeit/GaalopCompiler/gaalop-2.0/trunk/clucalc/src/main/antlr/de/gaalop/clucalc/input/CluCalcParser.g:42:3: ( statement )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==DECIMAL_LITERAL||LA1_0==FLOATING_POINT_LITERAL||LA1_0==MINUS||LA1_0==IF||(LA1_0>=LOOP && LA1_0<=BREAK)||(LA1_0>=IDENTIFIER && LA1_0<=ARGUMENT_PREFIX)||LA1_0==PRAGMA||LA1_0==STAR||LA1_0==LBRACKET||LA1_0==CLBRACKET||LA1_0==REVERSE||LA1_0==SEMICOLON||(LA1_0>=QUESTIONMARK && LA1_0<=COLON)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /Users/christian/Studium/Masterarbeit/GaalopCompiler/gaalop-2.0/trunk/clucalc/src/main/antlr/de/gaalop/clucalc/input/CluCalcParser.g:0:0: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_script107);
            	    statement1=statement();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, statement1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_script110); if (state.failed) return retval;

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 1, script_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "script"

    public static class float_literal_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "float_literal"
    // /Users/christian/Studium/Masterarbeit/GaalopCompiler/gaalop-2.0/trunk/clucalc/src/main/antlr/de/gaalop/clucalc/input/CluCalcParser.g:45:1: float_literal : ( MINUS )? FLOATING_POINT_LITERAL ;
    public final CluCalcParser.float_literal_return float_literal() throws RecognitionException {
        CluCalcParser.float_literal_return retval = new CluCalcParser.float_literal_return();
        retval.start = input.LT(1);
        int float_literal_StartIndex = input.index();
        Object root_0 = null;

        Token MINUS3=null;
        Token FLOATING_POINT_LITERAL4=null;

        Object MINUS3_tree=null;
        Object FLOATING_POINT_LITERAL4_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }
            // /Users/christian/Studium/Masterarbeit/GaalopCompiler/gaalop-2.0/trunk/clucalc/src/main/antlr/de/gaalop/clucalc/input/CluCalcParser.g:45:14: ( ( MINUS )? FLOATING_POINT_LITERAL )
            // /Users/christian/Studium/Masterarbeit/GaalopCompiler/gaalop-2.0/trunk/clucalc/src/main/antlr/de/gaalop/clucalc/input/CluCalcParser.g:46:3: ( MINUS )? FLOATING_POINT_LITERAL
            {
            root_0 = (Object)adaptor.nil();

            // /Users/christian/Studium/Masterarbeit/GaalopCompiler/gaalop-2.0/trunk/clucalc/src/main/antlr/de/gaalop/clucalc/input/CluCalcParser.g:46:3: ( MINUS )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==MINUS) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // /Users/christian/Studium/Masterarbeit/GaalopCompiler/gaalop-2.0/trunk/clucalc/src/main/antlr/de/gaalop/clucalc/input/CluCalcParser.g:0:0: MINUS
                    {
                    MINUS3=(Token)match(input,MINUS,FOLLOW_MINUS_in_float_literal124); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    MINUS3_tree = (Object)adaptor.create(MINUS3);
                    adaptor.addChild(root_0, MINUS3_tree);
                    }

                    }
                    break;

            }

            FLOATING_POINT_LITERAL4=(Token)match(input,FLOATING_POINT_LITERAL,FOLLOW_FLOATING_POINT_LITERAL_in_float_literal127); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            FLOATING_POINT_LITERAL4_tree = (Object)adaptor.create(FLOATING_POINT_LITERAL4);
            adaptor.addChild(root_0, FLOATING_POINT_LITERAL4_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 2, float_literal_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "float_literal"

    public static class pragma_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "pragma"
    // /Users/christian/Studium/Masterarbeit/GaalopCompiler/gaalop-2.0/trunk/clucalc/src/main/antlr/de/gaalop/clucalc/input/CluCalcParser.g:52:1: pragma : ( PRAGMA RANGE_LITERAL float_literal LESS_OR_EQUAL IDENTIFIER LESS_OR_EQUAL float_literal | PRAGMA OUTPUT_LITERAL IDENTIFIER );
    public final CluCalcParser.pragma_return pragma() throws RecognitionException {
        CluCalcParser.pragma_return retval = new CluCalcParser.pragma_return();
        retval.start = input.LT(1);
        int pragma_StartIndex = input.index();
        Object root_0 = null;

        Token PRAGMA5=null;
        Token RANGE_LITERAL6=null;
        Token LESS_OR_EQUAL8=null;
        Token IDENTIFIER9=null;
        Token LESS_OR_EQUAL10=null;
        Token PRAGMA12=null;
        Token OUTPUT_LITERAL13=null;
        Token IDENTIFIER14=null;
        CluCalcParser.float_literal_return float_literal7 = null;

        CluCalcParser.float_literal_return float_literal11 = null;


        Object PRAGMA5_tree=null;
        Object RANGE_LITERAL6_tree=null;
        Object LESS_OR_EQUAL8_tree=null;
        Object IDENTIFIER9_tree=null;
        Object LESS_OR_EQUAL10_tree=null;
        Object PRAGMA12_tree=null;
        Object OUTPUT_LITERAL13_tree=null;
        Object IDENTIFIER14_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }
            // /Users/christian/Studium/Masterarbeit/GaalopCompiler/gaalop-2.0/trunk/clucalc/src/main/antlr/de/gaalop/clucalc/input/CluCalcParser.g:53:3: ( PRAGMA RANGE_LITERAL float_literal LESS_OR_EQUAL IDENTIFIER LESS_OR_EQUAL float_literal | PRAGMA OUTPUT_LITERAL IDENTIFIER )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==PRAGMA) ) {
                int LA3_1 = input.LA(2);

                if ( (LA3_1==RANGE_LITERAL) ) {
                    alt3=1;
                }
                else if ( (LA3_1==OUTPUT_LITERAL) ) {
                    alt3=2;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 1, input);

                    throw nvae;
                }
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // /Users/christian/Studium/Masterarbeit/GaalopCompiler/gaalop-2.0/trunk/clucalc/src/main/antlr/de/gaalop/clucalc/input/CluCalcParser.g:53:5: PRAGMA RANGE_LITERAL float_literal LESS_OR_EQUAL IDENTIFIER LESS_OR_EQUAL float_literal
                    {
                    root_0 = (Object)adaptor.nil();

                    PRAGMA5=(Token)match(input,PRAGMA,FOLLOW_PRAGMA_in_pragma142); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    PRAGMA5_tree = (Object)adaptor.create(PRAGMA5);
                    adaptor.addChild(root_0, PRAGMA5_tree);
                    }
                    RANGE_LITERAL6=(Token)match(input,RANGE_LITERAL,FOLLOW_RANGE_LITERAL_in_pragma144); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    RANGE_LITERAL6_tree = (Object)adaptor.create(RANGE_LITERAL6);
                    adaptor.addChild(root_0, RANGE_LITERAL6_tree);
                    }
                    pushFollow(FOLLOW_float_literal_in_pragma146);
                    float_literal7=float_literal();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, float_literal7.getTree());
                    LESS_OR_EQUAL8=(Token)match(input,LESS_OR_EQUAL,FOLLOW_LESS_OR_EQUAL_in_pragma148); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    LESS_OR_EQUAL8_tree = (Object)adaptor.create(LESS_OR_EQUAL8);
                    adaptor.addChild(root_0, LESS_OR_EQUAL8_tree);
                    }
                    IDENTIFIER9=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_pragma150); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    IDENTIFIER9_tree = (Object)adaptor.create(IDENTIFIER9);
                    adaptor.addChild(root_0, IDENTIFIER9_tree);
                    }
                    LESS_OR_EQUAL10=(Token)match(input,LESS_OR_EQUAL,FOLLOW_LESS_OR_EQUAL_in_pragma152); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    LESS_OR_EQUAL10_tree = (Object)adaptor.create(LESS_OR_EQUAL10);
                    adaptor.addChild(root_0, LESS_OR_EQUAL10_tree);
                    }
                    pushFollow(FOLLOW_float_literal_in_pragma154);
                    float_literal11=float_literal();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, float_literal11.getTree());

                    }
                    break;
                case 2 :
                    // /Users/christian/Studium/Masterarbeit/GaalopCompiler/gaalop-2.0/trunk/clucalc/src/main/antlr/de/gaalop/clucalc/input/CluCalcParser.g:54:5: PRAGMA OUTPUT_LITERAL IDENTIFIER
                    {
                    root_0 = (Object)adaptor.nil();

                    PRAGMA12=(Token)match(input,PRAGMA,FOLLOW_PRAGMA_in_pragma160); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    PRAGMA12_tree = (Object)adaptor.create(PRAGMA12);
                    adaptor.addChild(root_0, PRAGMA12_tree);
                    }
                    OUTPUT_LITERAL13=(Token)match(input,OUTPUT_LITERAL,FOLLOW_OUTPUT_LITERAL_in_pragma162); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    OUTPUT_LITERAL13_tree = (Object)adaptor.create(OUTPUT_LITERAL13);
                    adaptor.addChild(root_0, OUTPUT_LITERAL13_tree);
                    }
                    IDENTIFIER14=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_pragma164); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    IDENTIFIER14_tree = (Object)adaptor.create(IDENTIFIER14);
                    adaptor.addChild(root_0, IDENTIFIER14_tree);
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 3, pragma_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "pragma"

    public static class expression_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "expression"
    // /Users/christian/Studium/Masterarbeit/GaalopCompiler/gaalop-2.0/trunk/clucalc/src/main/antlr/de/gaalop/clucalc/input/CluCalcParser.g:60:1: expression : ( lvalue EQUALS expression -> ^( EQUALS lvalue expression ) | additive_expression | logical_or_expression );
    public final CluCalcParser.expression_return expression() throws RecognitionException {
        CluCalcParser.expression_return retval = new CluCalcParser.expression_return();
        retval.start = input.LT(1);
        int expression_StartIndex = input.index();
        Object root_0 = null;

        Token EQUALS16=null;
        CluCalcParser.lvalue_return lvalue15 = null;

        CluCalcParser.expression_return expression17 = null;

        CluCalcParser.additive_expression_return additive_expression18 = null;

        CluCalcParser.logical_or_expression_return logical_or_expression19 = null;


        Object EQUALS16_tree=null;
        RewriteRuleTokenStream stream_EQUALS=new RewriteRuleTokenStream(adaptor,"token EQUALS");
        RewriteRuleSubtreeStream stream_expression=new RewriteRuleSubtreeStream(adaptor,"rule expression");
        RewriteRuleSubtreeStream stream_lvalue=new RewriteRuleSubtreeStream(adaptor,"rule lvalue");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return retval; }
            // /Users/christian/Studium/Masterarbeit/GaalopCompiler/gaalop-2.0/trunk/clucalc/src/main/antlr/de/gaalop/clucalc/input/CluCalcParser.g:61:3: ( lvalue EQUALS expression -> ^( EQUALS lvalue expression ) | additive_expression | logical_or_expression )
            int alt4=3;
            alt4 = dfa4.predict(input);
            switch (alt4) {
                case 1 :
                    // /Users/christian/Studium/Masterarbeit/GaalopCompiler/gaalop-2.0/trunk/clucalc/src/main/antlr/de/gaalop/clucalc/input/CluCalcParser.g:61:5: lvalue EQUALS expression
                    {
                    pushFollow(FOLLOW_lvalue_in_expression179);
                    lvalue15=lvalue();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_lvalue.add(lvalue15.getTree());
                    EQUALS16=(Token)match(input,EQUALS,FOLLOW_EQUALS_in_expression181); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_EQUALS.add(EQUALS16);

                    pushFollow(FOLLOW_expression_in_expression183);
                    expression17=expression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_expression.add(expression17.getTree());


                    // AST REWRITE
                    // elements: lvalue, EQUALS, expression
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 61:30: -> ^( EQUALS lvalue expression )
                    {
                        // /Users/christian/Studium/Masterarbeit/GaalopCompiler/gaalop-2.0/trunk/clucalc/src/main/antlr/de/gaalop/clucalc/input/CluCalcParser.g:61:33: ^( EQUALS lvalue expression )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(stream_EQUALS.nextNode(), root_1);

                        adaptor.addChild(root_1, stream_lvalue.nextTree());
                        adaptor.addChild(root_1, stream_expression.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;}
                    }
                    break;
                case 2 :
                    // /Users/christian/Studium/Masterarbeit/GaalopCompiler/gaalop-2.0/trunk/clucalc/src/main/antlr/de/gaalop/clucalc/input/CluCalcParser.g:62:5: additive_expression
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_additive_expression_in_expression199);
                    additive_expression18=additive_expression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, additive_expression18.getTree());

                    }
                    break;
                case 3 :
                    // /Users/christian/Studium/Masterarbeit/GaalopCompiler/gaalop-2.0/trunk/clucalc/src/main/antlr/de/gaalop/clucalc/input/CluCalcParser.g:63:5: logical_or_expression
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_logical_or_expression_in_expression205);
                    logical_or_expression19=logical_or_expression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, logical_or_expression19.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 4, expression_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "expression"

    public static class argument_expression_list_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "argument_expression_list"
    // /Users/christian/Studium/Masterarbeit/GaalopCompiler/gaalop-2.0/trunk/clucalc/src/main/antlr/de/gaalop/clucalc/input/CluCalcParser.g:66:1: argument_expression_list : expression ( COMMA expression )* ;
    public final CluCalcParser.argument_expression_list_return argument_expression_list() throws RecognitionException {
        CluCalcParser.argument_expression_list_return retval = new CluCalcParser.argument_expression_list_return();
        retval.start = input.LT(1);
        int argument_expression_list_StartIndex = input.index();
        Object root_0 = null;

        Token COMMA21=null;
        CluCalcParser.expression_return expression20 = null;

        CluCalcParser.expression_return expression22 = null;


        Object COMMA21_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return retval; }
            // /Users/christian/Studium/Masterarbeit/GaalopCompiler/gaalop-2.0/trunk/clucalc/src/main/antlr/de/gaalop/clucalc/input/CluCalcParser.g:67:3: ( expression ( COMMA expression )* )
            // /Users/christian/Studium/Masterarbeit/GaalopCompiler/gaalop-2.0/trunk/clucalc/src/main/antlr/de/gaalop/clucalc/input/CluCalcParser.g:67:7: expression ( COMMA expression )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_expression_in_argument_expression_list220);
            expression20=expression();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, expression20.getTree());
            // /Users/christian/Studium/Masterarbeit/GaalopCompiler/gaalop-2.0/trunk/clucalc/src/main/antlr/de/gaalop/clucalc/input/CluCalcParser.g:67:18: ( COMMA expression )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==COMMA) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // /Users/christian/Studium/Masterarbeit/GaalopCompiler/gaalop-2.0/trunk/clucalc/src/main/antlr/de/gaalop/clucalc/input/CluCalcParser.g:67:20: COMMA expression
            	    {
            	    COMMA21=(Token)match(input,COMMA,FOLLOW_COMMA_in_argument_expression_list224); if (state.failed) return retval;
            	    pushFollow(FOLLOW_expression_in_argument_expression_list227);
            	    expression22=expression();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, expression22.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {
